flaresolverr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
spec:
  template:
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8191
              name: web
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /opt/flaresolverr/config
            type: Directory
