flaresolverr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8191
      name: web
