flaresolverr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - secretName: flaresolverr-ingress-tls
      hosts:
        - flaresolverr.sergi.cool
  rules:
    - host: flaresolverr.sergi.cool
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: flaresolverr
                port:
                  name: web
